added updating book
