# src/router.js
@@ -7,8 +7,12 @@ const router = Router();
 
 router.get('/api/v1/books', book.getAll);
 router.post('/api/v1/books', book.create);
+
 router.get('/api/v1/books/:id', book.get);
 router.delete('/api/v1/books/:id', book.delete);
+router.put('/api/v1/books/:id', book.update);
+router.post('/api/v1/books/:id/rate', book.rate);
+
 router.get('/api/v1/books/author/:id', book.getByAuthor);
 router.get('/api/v1/books/rating/:rating', book.getByRating);
 
